# claude_status_line

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  justfile  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
src/: install.rs  main.rs
